# telegram-manager-lab

./: .env.example  .gitignore  CLAUDE.md  DEVELOPMENT.md  README.md  analisecoderabbit_debug.md  archive_bots.py  count_bots.py  debug_config.py  main.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
docs/plans/: 2026-01-06-refactor-arquitetura.md
telegram_manager/: __init__.py
telegram_manager/application/: bootstrap.py
telegram_manager/application/ports/: dialog_exporter.py  dialog_scanner.py  media_downloader.py
telegram_manager/application/use_cases/: download_media.py  export_dialogs.py  scan_dialogs.py
telegram_manager/core/: __init__.py  exporter.py  scanner.py
telegram_manager/domain/entities/: dialog.py
telegram_manager/domain/policies/: bot_classification.py
telegram_manager/infrastructure/config/: env.py
telegram_manager/infrastructure/storage/: dialog_exporter.py
telegram_manager/infrastructure/telethon/: client.py  downloader.py  scanner.py
telegram_manager/interface/: cli.py  stop_bot.py
telegram_manager/interface/ui/: components.py  theme.py
telegram_manager/ui/: __init__.py  components.py  theme.py
telegram_manager/utils/: __init__.py  config.py
tests/: test_config.py  test_exporter.py  test_policies.py  test_public_api.py  test_ui_components.py  test_ui_theme.py  test_use_cases.py
